# SiliconV

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  ROADMAP.md  opencode.yml  sv-cli
.github/workflows/: ci.yml  kernel.yml  release.yml
.opencode/: AGENTS.md
.opencode/memory/: 2026-06-02.md
SiliconV/: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  opencode.json  opencode.yml
SiliconV/.github/: dependabot.yml
SiliconV/.github/workflows/: ci.yml  kernel.yml  opencode.yml  release.yml
SiliconV/android/binder/: android_dtb.h
SiliconV/android/graphics/: README.md
SiliconV/android/init/: README.md
SiliconV/android/shims/: shims.h
SiliconV/core/irq/: gic.c
SiliconV/core/memory/: dtb.c
SiliconV/core/vm/: boot_stub.ld  bootimg.c  bootimg.h  machine.c  machine.h
SiliconV/devices/transport/: virtio_mmio.h
SiliconV/devices/uart/: pl011.c  pl011.h
SiliconV/devices/virtio-blk/: virtio_blk.c
SiliconV/frontend/cli/: main.c
SiliconV/frontend/cocoa/: AppDelegate.m  SiliconV-Info.plist
SiliconV/frontend/cocoa/zh-Hans.lproj/: Localizable.strings
SiliconV/hypervisor/abstraction/: hv.c  hv.h
SiliconV/hypervisor/hvf/: hvf.c
SiliconV/hypervisor/kvm/: kvm.c
SiliconV/kernel/configs/: android.config
SiliconV/scripts/: build_kernel.sh  build_kernel_macos.sh
SiliconV/spec/: README.md  hardware-stack.md
SiliconV/spec/devices/: virtio-matrix.md
SiliconV/spec/irq/: irq-map.md
SiliconV/spec/svabi/: svabi-v0.md
android/: README.md  README.zh-CN.md
android/aosp/: README.md  README.zh-CN.md
android/binder/: README.md  README.zh-CN.md  ashmem.h  binder.h  dmabuf.h
android/graphics/: README.zh-CN.md
android/init/: README.zh-CN.md  fstab.siliconv  init.siliconv.rc  init.siliconv.sh
android/sepolicy/: README.md  README.zh-CN.md  file_contexts  siliconv.te
android/shims/: README.md  README.zh-CN.md  gralloc.h  hwc_hal.h
core/: README.md  README.zh-CN.md
core/boot/apple/: bootargs.c  bootargs.d  bootargs.h  dtre.c  dtre.d  dtre.h  img4.c  img4.d  img4.h  macho.c  macho.d  macho.h  xnu_boot.c  xnu_boot.d  xnu_boot.h
core/irq/: README.md  README.zh-CN.md  gic.c  gic.d  gic.h
core/memory/: README.md  README.zh-CN.md  dtb.c  dtb.d  dtb.h  mmio_addrs.h
core/object/: README.md  README.zh-CN.md  psci.c  psci.d  psci.h
core/vm/: README.md  README.zh-CN.md  boot_stub.S  bootimg.c  bootimg.d  machine.c  machine.d  machine.h  machine_apple.c  machine_apple.d  machine_apple.h
devices/: README.md  README.zh-CN.md
devices/apple-aic/: apple_aic.c  apple_aic.d  apple_aic.h
devices/apple-dart/: apple_dart.c  apple_dart.d  apple_dart.h
devices/apple-gpio/: apple_gpio.c  apple_gpio.d  apple_gpio.h
devices/apple-i2c/: apple_i2c.c  apple_i2c.d  apple_i2c.h
devices/apple-nvme/: apple_nvme.c  apple_nvme.d  apple_nvme.h
devices/apple-nvram/: apple_nvram.c  apple_nvram.d  apple_nvram.h
devices/apple-sep/: apple_sep.c  apple_sep.d  apple_sep.h
devices/apple-spmi/: apple_spmi.c  apple_spmi.d  apple_spmi.h
devices/apple-timer/: apple_timer.c  apple_timer.d  apple_timer.h
devices/apple-uart/: apple_uart.c  apple_uart.d  apple_uart.h
devices/apple-wdt/: apple_wdt.c  apple_wdt.d  apple_wdt.h
devices/transport/: README.md  README.zh-CN.md  virtio_mmio.c  virtio_mmio.d  virtio_mmio.h
devices/uart/: README.md  README.zh-CN.md  pl011.c  pl011.d  pl011.h
devices/virtio-blk/: README.md  README.zh-CN.md  virtio_blk.d  virtio_blk.h
devices/virtio-console/: virtio_console.c  virtio_console.d  virtio_console.h
devices/virtio-net/: tap_backend.c  tap_backend.d  tap_backend.h  virtio_net.c  virtio_net.d  virtio_net.h
docker/: Dockerfile  Dockerfile.kernel  README.md  README.zh-CN.md
docs/: BUILD.md  README.md  README.zh-CN.md
frontend/: README.md  README.zh-CN.md
frontend/cli/: README.md  README.zh-CN.md  main.c  main.d
frontend/cocoa/: AppDelegate.h  AppDelegate.m  ConsoleViewController.h  ConsoleViewController.m  MainWindowController.h  MainWindowController.m  README.md  README.zh-CN.md  SiliconV.icns  VMEngine.h  VMEngine.m  VMViewController.h  VMViewController.m
frontend/cocoa/en.lproj/: Localizable.strings
frontend/qt/: ConsoleWidget.cpp  ConsoleWidget.h  MainWindow.cpp  MainWindow.h  VMDisplayWidget.cpp  VMDisplayWidget.h  VMManager.cpp  VMManager.h  main.cpp
gpu/: README.md  README.zh-CN.md
hypervisor/: README.md  README.zh-CN.md
hypervisor/abstraction/: README.md  README.zh-CN.md  hv.c  hv.d  hv.h
hypervisor/hvf/: README.md  README.zh-CN.md  hvf.c
hypervisor/kvm/: README.md  README.zh-CN.md  kvm.c  kvm.d
hypervisor/tcg/: README.md  tcg.c  tcg.d  tcg.h  tcg_cpu.h  tcg_decode.c  tcg_decode.d  tcg_decode.h  tcg_exec.c  tcg_exec.d  tcg_exec.h  tcg_mmu.c  tcg_mmu.d  tcg_mmu.h
hypervisor/whpx/: README.md
initramfs/: init.c  ptrace_wrapper.c  reboot_wrapper.c  shim_reboot.c  syscall_intercept.c
kernel/: README.md  README.zh-CN.md
kernel/configs/: android.config
memory/: 2026-06-02.md
runtime/: README.md  README.zh-CN.md
scripts/: README.md  README.zh-CN.md  build_all.sh  build_android_images.sh  build_initramfs.sh  build_kernel.sh  build_windows.bat  create_minimal_rootfs.sh  create_rootfs.sh  download_from_aliyun.sh  download_gsi.sh  extract_gsi_ramdisk.sh  gen_test_kernel.py  gen_test_kernel2.py  prepare_rootfs.sh  test_android_qemu.sh  test_kernel_qemu.sh  test_qemu.sh
spec/: README.zh-CN.md
spec/apple/: svabi-apple-v0.md
spec/boot/: README.md  README.zh-CN.md  apple-boot-flow.md  boot-flow.md  dtb-schema.md
spec/devices/: README.md  README.zh-CN.md
spec/irq/: README.md  README.zh-CN.md  apple-irq-map.md
spec/memory/: README.md  README.zh-CN.md  apple-mmio-map.md  mmio-map.md
spec/svabi/: README.md  README.zh-CN.md  svabi-v0.md
tests/: README.md  README.zh-CN.md
tests/integration/: android_initramfs_init.c  init  test_android_first_stage.c  test_kernel_boot_qemu.c
tests/unit/: test_apple_aic.c  test_apple_nvme.c  test_apple_xnuboot.c  test_dtb.c  test_uart.c  test_virtio_mmio.c
toolchain/: README.md  README.zh-CN.md
(+1 files in other folders)
